# peektab

./: .gitignore  README.md  pyproject.toml
data/: sample.csv
src/peektab/: cli.py  utils.py
