[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peektab"
version = "0.1.0"
description = "A fast, friendly CLI to inspect, summarize, and convert CSV/JSONL/Parquet in your terminal."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "You", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
  "polars>=1.4.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1"
]

[project.urls]
Homepage = "https://github.com/yourname/peektab"

[project.scripts]
peektab = "peektab.cli:app"

[tool.typer]
# allow rich tracebacks in development if desired

[tool.setuptools.packages.find]
where = ["src"]
